--- a/style.css
+++ b/style.css
@@ -140,7 +140,17 @@ nav {
   width: 1.6rem;
   margin-right: 1rem;
 }
+
 /* Find a way to turn color to white */
+.search { background-color: hsl(var(--color-white));}
+
+.search-icons {
+  width: 1.6rem;
+}
+
+#search-input {
+  background-color: hsl(var(--color-gray));
+}
 
 .main-meta {
   border: 1px solid hsl(var(--color-gray));
